--- a/source/assets/stylesheets/application.scss
+++ b/source/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "atoms/buttons";
 @import "atoms/colors";
 @import "atoms/close";
+@import "atoms/fonts";
 @import "atoms/glyphicons";
 @import "atoms/headings";
 @import "atoms/images";
@@ -41,6 +42,7 @@
 @import "molecules/wells";
 
 @import "organisms/modals";
+@import "organisms/navbar";
 @import "organisms/grid";
 
 @import "templates/print";
