--- a/source/assets/stylesheets/atoms/_buttons.scss
+++ b/source/assets/stylesheets/atoms/_buttons.scss
@@ -1,12 +1,24 @@
 // _buttons.scss
 
+a {
+	color: $link-color;
+}
+
+a:hover,
+a:active,
+a:focus {
+	color: $link-hover-color;
+	text-decoration: $link-hover-decoration;
+}
+
 button,
 .btn {
 	display: inline-block;
 	margin-bottom: 0;
 	padding: $btn-padding-base;
+	font-family: $font-stack;
     font-size: $font-size-base;
-    font-weight: 400;
+    font-weight: 100;
     line-height: $line-height-base;
     text-align: center;
     white-space: nowrap;
@@ -19,7 +31,7 @@ button,
     -ms-user-select: none;
     user-select: none;
     background-image: none;
-    border: 2px solid transparent;
+    border: $btn-border-thickness-base solid transparent;
     border-radius: $border-radius-base;
     transition: $transition;
 }
@@ -28,7 +40,7 @@ button,
 
 .btn-default,
 .btn-primary {
-	background-color: $btn-primary-bg;
+	background-color: $btn-bg-ghost;
 	border-color: $btn-primary-border;
 	color: $btn-primary-color;
 }
@@ -47,7 +59,7 @@ button,
 .btn-secondary,
 .btn-info {
 	background-color: $btn-default-bg;
-	border: 2px $btn-default-border solid;
+	border: $btn-border-thickness-base $btn-default-border solid;
 	color: $btn-default-color;
 	transition: $transition;
 	padding: $btn-padding-base;
