--- a/source/assets/stylesheets/libraries/_variables.scss
+++ b/source/assets/stylesheets/libraries/_variables.scss
@@ -5,31 +5,42 @@ $transition:						0.15s;
 
 /** Typography **/
 
-$font-stack:						"Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+$font-stack:						"Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+$font-stack-catamaran:				"Catamaran", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
 $font-stack-serif:       			Georgia, "Times New Roman", Times, serif;
 $font-stack-monospace:   			Menlo, Monaco, Consolas, "Courier New", monospace;
 
 $font-size-base:					$scale;
 $font-size-large:         			2rem;
-$font-size-small:         			.875rem;
+$font-size-small:         			$font-size-base;
 $font-size-body:					$font-size-small;
 
 $line-height-base:        			1.3rem;
 $line-height-large:         		$line-height-base * 1.2;
 $line-height-small:         		$line-height-base * .8;
 
-$font-size-h1:            			floor(($font-size-base * 2.6));
-$font-size-h2:            			floor(($font-size-base * 2.15));
-$font-size-h3:            			ceil(($font-size-base * 1.7));
-$font-size-h4:            			ceil(($font-size-base * 1.25));
-$font-size-h5:            			$font-size-base;
-$font-size-h6:            			ceil(($font-size-base * 0.85));
+$font-size-h1:            			floor(($font-size-base * 3.5));
+$font-size-h1-subhead:				floor(($font-size-base * 1.5));
 
-$headings-font-family:    			inherit;
-$headings-font-weight:    			500;
+$font-size-h2:            			floor(($font-size-base * 3));
+$font-size-h2-subhead:				floor(($font-size-base * 1.25)); 
+
+$font-size-h3:            			ceil(($font-size-base * 1.7));
+$font-size-h3-subhead:				floor(($font-size-base * 1.5)); 
+
+$font-size-h4:            			ceil(($font-size-base * 1.25));
+$font-size-h4-subhead:				floor(($font-size-base * 1.5)); 
+
+$font-size-h5:            			$font-size-base;
+$font-size-h5-subhead:				floor(($font-size-base * 1.5)); 
+
+$font-size-h6:            			ceil(($font-size-base * 0.85));
+$font-size-h6-subhead:				floor(($font-size-base * 1.5)); 
+
+$headings-font-family:    			$font-stack;
+$headings-font-weight:    			100;
 $headings-line-height:    			1.1;
 $headings-color:          			inherit;
-
 
 /** Colors **/
 //Lights & Darks
@@ -62,9 +73,9 @@ $brand-warning:         			#f0ad4e;
 $brand-danger:         				#d9534f;
 
 
-$body-bg:							$color-white;
-$text-color:						$color-gray-dark;
-$link-color:						$color-brand-secondary;
+$body-bg:							$color-brand-auxiliary-1;
+$text-color:						$color-brand-secondary;
+$link-color:						$color-brand-tertiary;
 $link-hover-color:					darken($link-color, 10%);
 $link-hover-decoration:				none;
 
@@ -72,14 +83,14 @@ $component-active-color:    		#fff;
 $component-active-bg:       		$brand-primary;
 
 
-$border-radius-base:        		.125rem;
+$border-radius-base:        		.188rem;
 $border-radius-large:       		$border-radius-base * 2;
 $border-radius-small:       		$border-radius-base * .5;
 
 
 /** Buttons **/
 $btn-font-weight:                	normal;
-$btn-border-thickness-base:			.125rem;
+$btn-border-thickness-base:			1px;
 $btn-bg-ghost:						transparent;
 
 $btn-padding-base:					.5rem 1rem;
@@ -90,7 +101,7 @@ $btn-padding-extra-small:			.125rem .25rem;
 
 
 
-$btn-primary-color:              	$color-brand-tertiary;
+$btn-primary-color:              	$color-brand-primary;
 $btn-primary-bg:                 	$color-cta;
 $btn-primary-border:             	$color-cta;
 $btn-primary-color-hover:	     	$color-brand-tertiary;
@@ -171,6 +182,8 @@ $page-padding-right:		$page-padding-left;
 
 $padding-base-vertical:     $padding-base;
 $padding-base-horizontal:   .875rem;
+
+$padding-extra-large:		$padding-base * 4;
 
 $padding-large:				$padding-base * 2;
 $padding-large-vertical:    $padding-large;
