--- a/source/assets/stylesheets/atoms/_buttons.scss
+++ b/source/assets/stylesheets/atoms/_buttons.scss
@@ -94,6 +94,10 @@ button,
 	background-color: $btn-bg-ghost;
 }
 
+.btn-lg {
+	padding: $btn-padding-large;
+	font-size: $font-size-large;
+}
 
 //CUSTOM OVERRIDES
 // Fixes mismatched button group height
