--- a/source/assets/stylesheets/atoms/_headings.scss
+++ b/source/assets/stylesheets/atoms/_headings.scss
@@ -21,23 +21,34 @@ h2 {
 	font-family: $font-stack;
 	font-size: $font-size-h2; 
 	color: $color-brand-secondary;
-	font-weight: 100;
+	font-weight: 200;
 }
 
 h2 small {
 	font-size: $font-size-h2-subhead;
 	color: $color-brand-tertiary;
-	font-weight: 100;
+	font-weight: 300;
 }
 	
 h3 {
-	font-size: $font-size-h3; 
+	font-family: $font-stack;
+	font-size: $font-size-h2; 
 	color: $color-brand-secondary;
+	font-weight: 100;
 }
-	
+
+h3 small {
+	font-family: $font-stack-catamaran;
+	font-size: $font-size-base;
+	color: $color-brand-tertiary;
+	font-weight: 200;
+}
+
 h4 {
+	font-family: $font-stack;
 	font-size: $font-size-h4; 
-	color: $color-gray-dark;
+	color: $color-brand-tertiary;
+	font-weight: 500;
 }
 
 h5 {
