--- a/source/assets/stylesheets/organisms/_navbar.scss
+++ b/source/assets/stylesheets/organisms/_navbar.scss
@@ -1,14 +1,16 @@
 nav #logo {
 	background-image: url(../images/ssxd-logo.png);
 	background-size: cover;
-	width: 3rem;
-	height: 3rem;
+	width: 2.5rem;
+	height: 2.5rem;
+	position: relative;
+    left: 1.6rem;
     z-index: 1000;
     background-position: 50% 50%;
     background-repeat: no-repeat;
     display: inline-block;
-    margin-top: .5rem;
-    	-moz-transition: all .3s;
+    margin-top: .8rem;
+	-moz-transition: all .3s;
     -o-transition: all .3s;
     -webkit-transition: all .3s;
     transition: all .3s;
@@ -25,7 +27,7 @@ nav #nav-toggle {
     height: 100%;
     line-height: 4rem;
     padding-right: 2rem;
-    	-moz-transition: all .3s;
+	-moz-transition: all .3s;
     -o-transition: all .3s;
     -webkit-transition: all .3s;
     transition: all .3s;
@@ -94,6 +96,7 @@ nav .bar.scrolled {
 nav .bar.scrolled #logo {
 	height: 2rem;
 	width: 2rem;
+	margin-top: .55rem;
 	-moz-transition: all .3s;
     -o-transition: all .3s;
     -webkit-transition: all .3s;
@@ -115,7 +118,7 @@ nav .nav-background {
     width: 100%;
     height: 100%;
     background: none;
-    display: table;
+    display: none;
     -moz-transition: all $transition;
     -o-transition: all $transition;
     -webkit-transition: all $transition;
@@ -125,6 +128,7 @@ nav .nav-background {
 nav.open .nav-background {
     background-color: rgba(205,69,61,0.9) !important;
 	text-align: center;
+	display: table;
 }
 
 nav .nav-background ul {
