--- a/source/assets/stylesheets/application.css
+++ b/source/assets/stylesheets/application.css
@@ -6115,12 +6115,12 @@ body {
   background-color: #0e1218; }
 
 a {
-  color: #dad7c2; }
+  color: #cd453d; }
 
 a:hover,
 a:active,
 a:focus {
-  color: #c7c2a2;
+  color: #ab332c;
   text-decoration: none; }
 
 button,
@@ -6315,6 +6315,12 @@ p {
   font-family: "Catamaran", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
   font-weight: 100; }
 
+@media screen and (max-width: 768px) {
+  p {
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+    margin-top: 1.5rem; } }
+
 .jumbotron {
   padding-left: 2rem;
   padding-right: 2rem; }
@@ -6342,10 +6348,10 @@ nav #logo {
   background-repeat: no-repeat;
   display: inline-block;
   margin-top: .8rem;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s; }
+  -moz-transition: all 0.15s;
+  -o-transition: all 0.15s;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s; }
 
 nav.open #logo {
   background-image: url(../images/ssxd-logo-dark.png); }
@@ -6357,10 +6363,11 @@ nav #nav-toggle {
   height: 100%;
   line-height: 4rem;
   padding-right: 2rem;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s; }
+  -moz-transition: all 0.15s;
+  -o-transition: all 0.15s;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s;
+  cursor: pointer; }
 
 nav #nav-toggle::after {
   font-family: 'font-awesome';
@@ -6408,46 +6415,53 @@ nav .bar {
   transition: all 0.15s; }
 
 nav .bar.scrolled {
-  background-color: rgba(205, 69, 61, 0.3);
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+  background-color: rgba(205, 69, 61, 0.15);
+  -moz-transition: all 0.15s;
+  -o-transition: all 0.15s;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s;
   height: 3rem; }
 
 nav .bar.scrolled #logo {
   height: 2rem;
   width: 2rem;
   margin-top: .55rem;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s; }
+  -moz-transition: all 0.15s;
+  -o-transition: all 0.15s;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s; }
 
 nav .bar.scrolled #nav-toggle {
   line-height: 3rem;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s; }
+  -moz-transition: all 0.15s;
+  -o-transition: all 0.15s;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s; }
 
 nav .nav-background {
-  z-index: 1500;
+  z-index: 0;
   position: fixed;
-  top: 0px;
+  top: -10px;
   width: 100%;
   height: 100%;
   background: none;
-  display: none;
+  visibility: hidden;
+  display: table;
   -moz-transition: all 0.15s;
   -o-transition: all 0.15s;
   -webkit-transition: all 0.15s;
   transition: all 0.15s; }
 
 nav.open .nav-background {
+  z-index: 1500;
+  top: 0;
   background-color: rgba(205, 69, 61, 0.9) !important;
   text-align: center;
-  display: table; }
+  visibility: visible;
+  -moz-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear; }
 
 nav .nav-background ul {
   list-style: none;
@@ -6477,7 +6491,11 @@ nav .nav-background ul li a {
   color: #ffffff;
   font-size: 56px;
   width: 100%;
-  display: block; }
+  display: block;
+  -moz-transition: all 0.15s;
+  -o-transition: all 0.15s;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s; }
 
 nav .nav-background ul li a:hover {
   background-color: #0e1218;
@@ -6496,7 +6514,7 @@ body {
   background-color: #0e1218; }
 
 .masthead {
-  height: 100vh;
+  min-height: 100vh;
   background-image: url(../images/ssxd-bg.jpg);
   background-size: cover;
   background-attachment: fixed;
@@ -6519,12 +6537,19 @@ body {
   margin-top: 2rem !important;
   color: #aeaeae; }
 
+.masthead-down-arrow {
+  color: #cd453d;
+  font-size: 2.2rem;
+  font-weight: 100;
+  position: relative;
+  top: 6rem; }
+
 @media screen and (max-width: 768px) {
   .masthead .masthead-content h1 {
     margin: 0;
     padding: 0;
-    line-height: 2.1rem;
-    font-size: 2rem; }
+    line-height: 2.6rem;
+    font-size: 2.4rem; }
   .masthead .masthead-content h1 small {
     margin-top: 2rem !important;
     font-size: 1rem; } }
@@ -6535,13 +6560,32 @@ body {
   background-attachment: fixed;
   background-position: center top;
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center; }
 
+.opportunity-content h2 {
+  margin: 0;
+  padding: 0;
+  line-height: 3.2rem; }
+
+.opportunity-content p {
+  line-height: 1.8rem;
+  color: #dad7c2;
+  margin-top: 2rem;
+  font-size: 1.3rem;
+  font-family: "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !important; }
+
+@media screen and (max-width: 768px) {
+  .opportunity-content h2 {
+    line-height: 2.7rem;
+    font-size: 2.4rem; }
+  .opportunity-content p {
+    font-size: 1.2rem; } }
+
 .connect {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center; }
@@ -6551,8 +6595,20 @@ body {
   padding: 0;
   line-height: 3rem; }
 
+.connect p {
+  color: #dad7c2;
+  font-family: "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-size: 1.5rem;
+  margin-top: 1.5rem;
+  font-weight: 100; }
+
 .connect a {
   margin-top: 5rem; }
+
+@media screen and (max-width: 768px) {
+  .connect h2 {
+    line-height: 2.7rem;
+    font-size: 2.4rem; } }
 
 .resume {
   height: 100vh;
@@ -6574,20 +6630,41 @@ body {
 
 .specialties {
   padding-top: 4rem;
-  height: 100vh; }
+  min-height: 100vh;
+  margin-bottom: 4rem; }
 
 .specialties h3 {
   margin: 0; }
+
+.specialties > p {
+  line-height: 1.8rem;
+  color: #dad7c2;
+  font-size: 1.3rem;
+  font-family: "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !important; }
 
 .specialties-tiles {
   margin-top: 2rem;
   margin-bottom: 2rem; }
 
 .specialty-tile {
-  height: 14rem; }
+  height: 18rem;
+  padding-top: 1rem;
+  font-weight: 100; }
+
+.specialties .fa {
+  width: 100%;
+  font-size: 3.5rem;
+  color: #cd453d; }
+
+.specialties .btn {
+  margin-top: 2rem; }
+
+@media screen and (max-width: 768px) {
+  .specialty-tile {
+    margin-top: 4rem; } }
 
 .portfolio {
-  height: 100vh;
+  min-height: 100vh;
   margin-top: 4rem; }
 
 .portfolio-tile img {
