--- a/source/assets/stylesheets/libraries/_variables.scss
+++ b/source/assets/stylesheets/libraries/_variables.scss
@@ -14,6 +14,7 @@ $font-size-base:					$scale;
 $font-size-large:         			2rem;
 $font-size-small:         			$font-size-base;
 $font-size-body:					$font-size-small;
+$font-size-mobile:					$font-size-base *1.5;
 
 $line-height-base:        			1.3rem;
 $line-height-large:         		$line-height-base * 1.2;
@@ -75,7 +76,7 @@ $brand-danger:         				#d9534f;
 
 $body-bg:							$color-brand-auxiliary-1;
 $text-color:						$color-brand-secondary;
-$link-color:						$color-brand-tertiary;
+$link-color:						$color-cta;
 $link-hover-color:					darken($link-color, 10%);
 $link-hover-decoration:				none;
 
