--- a/source/assets/stylesheets/organisms/_navbar.scss
+++ b/source/assets/stylesheets/organisms/_navbar.scss
@@ -36,8 +36,8 @@ nav #nav-toggle {
 }
 
 nav #nav-toggle::after {
-	font-family: 'font-awesome';
-	content: "\f0c9";
+	font-family: 'ssxd-icons';
+	content: "\e904";
 }
 
 nav.open #nav-toggle {
