--- a/source/assets/stylesheets/atoms/_fonts.scss
+++ b/source/assets/stylesheets/atoms/_fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Catamaran:100,200|Work+Sans:100,200,300,400,500');
+@import url('https://fonts.googleapis.com/css?family=Catamaran:100,200,600|Work+Sans:100,200,300,400,500');
 
 
 @font-face {
@@ -10,3 +10,47 @@
        url('../../bower_components/font-awesome/fonts/fontawesome-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
        url('../../bower_components/font-awesome/fonts/fontawesome-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
+
+
+@font-face {
+  font-family: 'ssxd-icons';
+  src:  url('../fonts/ssxd-icons/ssxd-icons.eot?dtr0ih');
+  src:  url('../fonts/ssxd-icons/ssxd-icons.eot?dtr0ih#iefix') format('embedded-opentype'),
+    url('../fonts/ssxd-icons/ssxd-icons.ttf?dtr0ih') format('truetype'),
+    url('../fonts/ssxd-icons/ssxd-icons.woff?dtr0ih') format('woff'),
+    url('../fonts/ssxd-icons/ssxd-icons.svg?dtr0ih#ssxd-icons') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'ssxd-icons' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-arrow-down:before {
+  content: "\e900";
+}
+.icon-arrow-left:before {
+  content: "\1f32e";
+}
+.icon-arrow-right:before {
+  content: "\e902";
+}
+.icon-arrow-up:before {
+  content: "\e903";
+}
+.icon-patty:before {
+  content: "\e904";
+}
+
