--- a/source/assets/stylesheets/pages/_page-resume.scss
+++ b/source/assets/stylesheets/pages/_page-resume.scss
@@ -15,3 +15,9 @@
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 }
+
+@media screen and (max-width: 768px) {
+	.page-resume .masthead {
+		background-attachment: scroll;
+	}
+}
