--- a/source/assets/stylesheets/atoms/_buttons.scss
+++ b/source/assets/stylesheets/atoms/_buttons.scss
@@ -2,6 +2,7 @@
 
 a {
 	color: $link-color;
+	transition: all 270ms cubic-bezier(0.77, 0, 0.175, 1),color 270ms cubic-bezier(0.77, 0, 0.175, 1);
 }
 
 a:hover,
@@ -9,6 +10,21 @@ a:active,
 a:focus {
 	color: $link-hover-color;
 	text-decoration: $link-hover-decoration;
+}
+
+a.text-link {
+	color: $link-color;
+    transition: 270ms cubic-bezier(0.77, 0, 0.175, 1),color 270ms cubic-bezier(0.77, 0, 0.175, 1);
+    box-shadow: inset 0 -0.12rem 0 $link-color;
+    display: inline-block;
+}
+
+a.text-link:hover,
+a.text-link:active,
+a.text-link:focus {
+	color: $link-hover-color;
+	text-decoration: $link-hover-decoration;
+    box-shadow: inset 0 -0.95rem 0 $link-color;
 }
 
 button,
@@ -34,6 +50,13 @@ button,
     border: $btn-border-thickness-base solid transparent;
     border-radius: $border-radius-base;
     transition: $transition;
+}
+
+@media screen and (max-width:768px) {
+	button,
+	.btn {
+		font-weight: 300;
+	}
 }
 
 
@@ -115,4 +138,16 @@ button,
 //Fixes FA vertical alignment in buttons
 .btn .fa {
 	top: 0;
+}
+
+@media screen and (max-width:768px) {
+	button,
+	.btn {
+		font-weight: 300;
+	}
+	
+	.btn-lg {
+		padding: $btn-padding-base;
+		font-size: $font-size-base;
+	}
 }
