--- a/source/assets/stylesheets/organisms/_portfolio-carousel.scss
+++ b/source/assets/stylesheets/organisms/_portfolio-carousel.scss
@@ -203,3 +203,71 @@
     opacity: .75;
     color: black;
 }
+
+@media screen and (max-width:768px) {
+	.portfolio-slide-info-panel {
+		background-color: #1B1F24;
+		padding-top: $padding-large;
+		min-height: auto;
+	}
+
+	.project-information {
+		position: relative;
+		top: inherit;
+		left: inherit;
+    	width: auto;
+    	transform: none;
+    	padding-bottom: $padding-base;
+	}
+	
+	.portfolio-slide-image-panel {
+		background-color: rgba(53,56,60, .15);
+		min-height: auto;
+		background-color: #1B1F24;
+	}
+	
+	.project-slide-image {
+		position: relative;
+		top: inherit;
+	    left: inherit;
+	    transform: translate(-50%, 0%);
+	    width: 75%;
+	    margin-bottom: $margin-base;
+	}
+
+	.slick-prev {
+		left: 1rem;
+		height: 2.8rem;
+	}
+	
+	
+	.slick-next {
+		right: 1rem;
+		height: 2.8rem;
+	}
+}
+
+@media screen and (max-width:992px) {
+	.project-information {
+	    position: inherit;
+	    top: inherit;
+	    left: inherit;
+	    transform: none;
+	    width: 66%;
+	    margin: 2rem auto;
+	}
+	
+	.project-slide-image {
+	    position: inherit;
+	    top: inherit;
+	    left: inherit;
+	    transform: none;
+	    width: 50%;
+	    margin: 0 auto 2rem;
+	}
+	
+	.portfolio-slide-info-panel {
+	    padding-bottom: 2rem;
+	}
+	
+}
