--- a/source/assets/stylesheets/pages/_page-home.scss
+++ b/source/assets/stylesheets/pages/_page-home.scss
@@ -45,6 +45,7 @@
 	.masthead .masthead-content h1 small {
 		margin-top: $margin-base !important;
 		font-size: 1rem;
+		font-weight: 300;
 	}
 }
 
@@ -82,6 +83,7 @@
 	
 	.opportunity-content p {
 		font-size: 1.2rem;
+		font-weight: 300;
 	}
 }
 
@@ -116,6 +118,7 @@
 		line-height: 2.7rem;
 		font-size: 2.4rem;
 	}
+	
 }
 
 .resume {
@@ -183,6 +186,14 @@
 	}
 }
 
+#clients p {
+	color: #dad7c2;
+    font-family: "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+    font-size: 1.5rem;
+    margin-top: 1.5rem;
+    font-weight: 100;
+}
+
 .client-logos {
 	width: 100%;
 }
@@ -202,4 +213,12 @@
 .footer {
 	padding-top: 4rem;
 	padding-bottom: 2rem;
+}
+
+@media screen and (max-width: 768px) {
+	.masthead,
+	.opportunity,
+	.resume {
+		background-attachment: scroll;
+	}
 }
