--- a/source/assets/stylesheets/atoms/_buttons.scss
+++ b/source/assets/stylesheets/atoms/_buttons.scss
@@ -25,6 +25,7 @@ a.text-link:focus {
 	color: $link-hover-color;
 	text-decoration: $link-hover-decoration;
     box-shadow: inset 0 -0.95rem 0 $link-color;
+    cursor: pointer !important;
 }
 
 button,
