updated profile image and text

--- a/source/assets/stylesheets/pages/_page-home.scss
+++ b/source/assets/stylesheets/pages/_page-home.scss
@@ -40,7 +40,7 @@
 		line-height: 2.6rem;
 		font-size: 2.4rem;
 	}
-	
+
 	.masthead .masthead-content h1 small {
 		margin-top: $margin-base !important;
 		font-size: 1rem;
@@ -78,7 +78,7 @@
 		line-height: 2.7rem;
 		font-size: 2.4rem;
 	}
-	
+
 	.opportunity-content p {
 		font-size: 1.2rem;
 		font-weight: 300;
@@ -115,11 +115,11 @@
 		line-height: 2.7rem;
 		font-size: 2.4rem;
 	}
-	
+
 }
 
 .resume {
-	background-image: url(../images/resume.jpg);
+	background-image: url(../images/lyle-rohr.jpg);
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: center top;
@@ -181,11 +181,11 @@
 }
 
 @media screen and (max-width: 768px) {
-	
+
 	.specialties-tiles {
 		padding-top: 0rem;
 	}
-	
+
 	.specialty-tile {
 		margin-top: 4rem;
 	}
